Add day4 code and tests.

--- a/aoc/y2021/Makefile
+++ b/aoc/y2021/Makefile
@@ -4,7 +4,7 @@ GUILE=guile --debug --no-auto-compile
 all: y2021
 
 y2021:
-	GUILE_LOAD_PATH=. $(GUILE) aoc/y2021/y2021.scm -i aoc/y2021/day1/test1.txt
+	GUILE_LOAD_PATH=. $(GUILE) aoc/y2021/y2021.scm
 
 # day1:
 # 	GUILE_LOAD_PATH=. $(GUILE) aoc/y2021/day1/day1.scm -i aoc/y2021/day1/test1.txt
@@ -19,3 +19,4 @@ test:
 	GUILE_LOAD_PATH=. $(GUILE) aoc/y2021/day1/tests/test-day1.scm
 	GUILE_LOAD_PATH=. $(GUILE) aoc/y2021/day2/tests/test-day2.scm
 	GUILE_LOAD_PATH=. $(GUILE) aoc/y2021/day3/tests/test-day3.scm
+	GUILE_LOAD_PATH=. $(GUILE) aoc/y2021/day4/tests/test-day4.scm
