Fix up some make issues.
Get Makefile working with just sample data.
Add sample data for 2021 day 9.
Create log directory if it doesn't exist.

--- a/aoc/y2021/Makefile
+++ b/aoc/y2021/Makefile
@@ -7,6 +7,7 @@ y2021:
 	GUILE_LOAD_PATH=. $(GUILE) aoc/y2021/y2021.scm
 
 test:
+	mkdir -p log
 	cd log && GUILE_LOAD_PATH=.. $(GUILE) ../aoc/y2021/day1/tests/test-day1.scm
 	cd log && GUILE_LOAD_PATH=.. $(GUILE) ../aoc/y2021/day2/tests/test-day2.scm
 	cd log && GUILE_LOAD_PATH=.. $(GUILE) ../aoc/y2021/day3/tests/test-day3.scm
