--- a/aoc/y2021/Makefile
+++ b/aoc/y2021/Makefile
@@ -16,4 +16,5 @@ test:
 	cd log && GUILE_LOAD_PATH=../../.. $(GUILE) ../day9/tests/test-day9.scm
 	cd log && GUILE_LOAD_PATH=../../.. $(GUILE) ../day10/tests/test-day10.scm
 	cd log && GUILE_LOAD_PATH=../../.. $(GUILE) ../day11/tests/test-day11.scm
+	cd log && GUILE_LOAD_PATH=../../.. $(GUILE) ../day12/tests/test-day12.scm
 	rm log/*.log
