Add 2021 day13 part1 and part2 solutions along with tests.

--- a/aoc/y2021/Makefile
+++ b/aoc/y2021/Makefile
@@ -17,4 +17,5 @@ test:
 	cd log && GUILE_LOAD_PATH=../../.. $(GUILE) ../day10/tests/test-day10.scm
 	cd log && GUILE_LOAD_PATH=../../.. $(GUILE) ../day11/tests/test-day11.scm
 	cd log && GUILE_LOAD_PATH=../../.. $(GUILE) ../day12/tests/test-day12.scm
+	cd log && GUILE_LOAD_PATH=../../.. $(GUILE) ../day13/tests/test-day13.scm
 	rm log/*.log
