Add a set class and module and tests for the set class for day15.
This is the first use of GOOPS in this AOC project.  GOOPS is the
object oriented extension to Guile.

--- a/aoc/Makefile
+++ b/aoc/Makefile
@@ -11,4 +11,5 @@ y2021:
 test:
 	mkdir -p log
 	cd log && GUILE_LOAD_PATH=../.. $(GUILE) ../tests/test-array.scm
+	cd log && GUILE_LOAD_PATH=../.. $(GUILE) ../tests/test-set.scm
 	rm log/*.log
